InternexDev_Sandbox/src/objects/GL_Matrix_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_GL_Code__c</fullName>
        <label>Bank GL Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Posting_Key__c</fullName>
        <label>Customer Posting Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Key__c</fullName>
        <label>Posting Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <label>Profit Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_GL_Indicator__c</fullName>
        <label>Special GL Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>GL Matrix Config</label>
</CustomObject>